[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/cat-ears.png" type="Texture" id=1]
[ext_resource path="res://sprites/box-cat.png" type="Texture" id=2]
[ext_resource path="res://scenes/friends/ScaredyCat.gd" type="Script" id=3]
[ext_resource path="res://audio/sfx/meow.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="ScaredyCat" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="MeowStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "sfx"
area_mask = 2

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_body_entered"]
[connection signal="finished" from="MeowStream" to="." method="_on_MeowStream_finished"]
